# mindspace

./: .env.example  .gitignore  BUILD_STATE.json  PRD.md  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: eval-system.md
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js
frontend/e2e/: channels.spec.ts  conversations.spec.ts  helpers.ts  search.spec.ts
frontend/src/: app.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: ChatInput.svelte  CogTag.svelte  MessageBubble.svelte  ResourceStatus.svelte  SearchModal.svelte  Sidebar.svelte
frontend/src/lib/stores/: channels.ts  conversations.ts  resources.ts  search.ts
frontend/src/routes/: +layout.svelte  +page.svelte
run/: dev.sh
src/mindspace/: __init__.py
src/mindspace/capture/: extractors.py  store.py
src/mindspace/cli/: admin.py  app.py  capture.py  eval.py  search.py
src/mindspace/core/: ids.py  models.py
src/mindspace/derived/: chunker.py  embeddings.py  registry.py  tag_suggester.py  text_prep.py
src/mindspace/eval/: __init__.py  history.py  metrics.py  runner.py  types.py
src/mindspace/infra/: config.py  embedder.py  keyword_index.py  paths.py  vectordb.py
src/mindspace/pipelines/: ingest.py  reindex.py  reprocess.py
src/mindspace/web/: __init__.py  app.py  deps.py  migrate_cli.py  tasks.py
src/mindspace/web/db/: engine.py  models.py
src/mindspace/web/routers/: channels.py  conversations.py  resources.py  search.py
tests/: conftest.py
tests/capture/: test_extractors.py  test_store.py
tests/core/: test_models.py
tests/derived/: test_chunker.py  test_embeddings.py
tests/eval/: test_metrics.py  test_retrieval_quality.py  test_runner.py
tests/eval/fixtures/: golden_test.json
tests/integration/: test_end_to_end.py
tests/pipelines/: test_ingest.py
tests/web/: conftest.py  test_channels.py  test_conversations.py  test_resource_processing.py  test_search.py
(+9 files in other folders)
