[project]
name = "mindspace"
version = "0.1.0"
description = "Personal Intelligence System"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-ulid>=3.0",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "chromadb>=1.0",
    "openai>=1.60",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ms = "mindspace.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindspace"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
